--- a/personal_finance_tracker/service/pom.xml
+++ b/personal_finance_tracker/service/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>endpoint</artifactId>
+    <artifactId>service</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.parcels</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
