--- a/personal_finance_tracker/pom.xml
+++ b/personal_finance_tracker/pom.xml
@@ -53,6 +53,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--open api -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
