--- a/personal_finance_tracker/service/pom.xml
+++ b/personal_finance_tracker/service/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.parcels</groupId>
+            <artifactId>application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
