--- a/application/pom.xml
+++ b/application/pom.xml
@@ -5,15 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.parcels</groupId>
-        <artifactId>personal-finance-tracker</artifactId>
+        <artifactId>pft-be</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>application</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.parcels</groupId>
+            <artifactId>endpoint</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
