--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -31,3 +31,14 @@ spring:
     serialization:
       write-dates-as-timestamps: false
     default-property-inclusion: always
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: shurbanovski.i
+    password: kmax gmej gnyz iubw
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+          auth: true
