--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.parcels</groupId>
-    <artifactId>personal-finance-tracker</artifactId>
+    <artifactId>pft-be</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.2</version>
+        <version>3.2.4</version>
     </parent>
     <modules>
         <module>application</module>
         <module>endpoint</module>
         <module>service</module>
         <module>model</module>
+        <module>test</module>
     </modules>
 
+    <!-- Use <dependencyManagement></dependencyManagement> and
+    provide only the desired dependency in the child pom-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -82,12 +85,21 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
 
     </dependencies>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
