--- a/service/pom.xml
+++ b/service/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.parcels</groupId>
-        <artifactId>personal-finance-tracker</artifactId>
+        <artifactId>pft-be</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>service</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -22,12 +22,6 @@
             <groupId>com.parcels</groupId>
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.parcels</groupId>
-            <artifactId>application</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
